# cs125-team90

./: .gitignore  README.md  pyproject.toml  test.patch  tests.py
data/: studySpots.db  tmp_study_live.db  tmp_study_real2.db  tmp_uo.db
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: constants.dart  main.dart  main_screen.dart
frontend/lib/models/: study_spot.dart
frontend/lib/pages/: details_page.dart  home_page.dart  login_page.dart  preferences_page.dart  search_page.dart
frontend/lib/services/: api_service.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  (+1 more)
scripts/: runIngestion.py  runServer.py  server.py  testUserConditions.py
src/: __init__.py  config.py  models.py  normalize.py  pipeline.py
src/dataStorage/: SQLlite.py  __init__.py
src/providers/: __init__.py  base.py  foursquare.py  googlePlaces.py  osm.py  uci.py  yelp.py
studySpotRecommender/: __init__.py  appConfig.py  dataModels.py  ingestionPipeline.py  normalizer.py  ranker.py  server.py  userModel.py
studySpotRecommender/providers/: __init__.py  foursquare.py  googlePlaces.py  osm.py  providerBase.py  uci.py  yelp.py
studySpotRecommender/storage/: __init__.py  sqliteRepo.py
tests/: testGoogleProvider.py  testIngestionPipeline.py  testNormalize.py  testOSMProvider.py  testRepository.py  testUCIProvider.py
(+7 files in other folders)
