[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uci-study-spot-pipeline"
version = "0.1.0"
description = "Live study places for UCI + nearby venues"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["studySpotRecommender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
pythonpath = ["."]
